--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
             Haz clic en un elemento para ver la información.
         </div>
     </div>
-<h3>Creado por GodeProgram</h3>
+<h3>Creado por Gode</h3>
+<h2>mailto:developer@gode.es</h2>
     <script src="script.js"></script>
 </body>
 </html>
